--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="synthwave">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/icon/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/VpmYqww/web-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Hotel Booking</title>
   </head>
